Solved issues with positioning and wordwrap. More tweaks to code

--- a/style.css
+++ b/style.css
@@ -175,17 +175,19 @@ header {
     flex-direction: row;
 }
 .infotext {
-    margin: 2px 5px;
+    margin: 2px 6px;
     width: 100%;
 }
 .boxbutton {
-    width: 30%;
-    height: 30%;
-    margin: 0 3px 0 0;
+    width: 90px;
+    height: 66px;
+    margin: 60px 3px 0 0;
     border: 1px solid #003049;
     border-radius: 10px;
     float: right;
     background-color:#669BBC;
     color:#C1121F;
     align-content: center;
+    shape-outside: inset(calc(100% - 50px) 0 0);
+    text-align: center;
 }
